--- a/app/src/main/assets/html/html_es/razon_falsos_descubrimientos.html
+++ b/app/src/main/assets/html/html_es/razon_falsos_descubrimientos.html
@@ -4,9 +4,9 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>Razón de Falsos Descubrimientos</title>
-    <link rel="stylesheet" href="css/formula.css">
-    <script src="js/mathjax-config.js"></script>
-    <script src="js/mathjax-3.2.0.js"></script>
+    <link rel="stylesheet" href="../css/formula.css">
+    <script src="../js/mathjax-config.js"></script>
+    <script src="../js/mathjax-3.2.0.js"></script>
 </head>
 <body>
     <h3 id="title">Razón de Falsos Descubrimientos</h3>
